--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -1,24 +1,20 @@
 <div class="container">
   <div class="main-body">
 
-
-
-    <!-- /Breadcrumb -->
-
     <div class="row gutters-sm">
       <div class="col-md-4 mb-3 ">
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-            
-                <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
-                  class="rounded-circle p-1 bg-primary" width="180">
-                <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
-                  class="rounded-circle p-1 bg-primary" width="180">
-      
+
+              <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                class="rounded-circle p-1 bg-primary" width="180">
+              <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
+                class="rounded-circle p-1 bg-primary" width="180">
+
 
               <div class="mt-3 ">
-                <h4>{{firstName}}'s profile</h4>
+                <h4>{{fullName}}'s profile</h4>
                 <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{email}}</p>
 
                 <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{gender}}</p>
@@ -32,25 +28,13 @@
         <div class="card mt-3 shadow p-3 mb-5 bg-body-tertiary rounded">
           <ul class="list-group list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="feather feather-globe mr-2 icon-inline">
-                  <circle cx="12" cy="12" r="10"></circle>
-                  <line x1="2" y1="12" x2="22" y2="12"></line>
-                  <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
-                  </path>
-                </svg>Website</h6>
-              <span class="text-secondary">https://bootdey.com</span>
+              <h6 class="mb-0"><i class="fa-solid fa-user-large"></i> Full Name</h6>
+              <span class="text-secondary"> {{fullName}}</span>
+
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="feather feather-github mr-2 icon-inline">
-                  <path
-                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-                  </path>
-                </svg>Github</h6>
-              <span class="text-secondary">bootdey</span>
+              <h6 class="mb-0"><i class="fa-regular fa-envelope"></i> Email</h6>
+              <span class="text-secondary">{{email}}</span>
             </li>
             <!-- <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
@@ -65,110 +49,75 @@
                     <span class="text-secondary">bootdey</span>
                   </li> -->
           </ul>
+          <div class="row">
+            <div class="col-sm-12">
+              <a class="btn btn-info " target="__blank"
+                href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-md-8">
-        <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0"><i class="fa-solid fa-user-large"></i>  Full Name</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                {{firstName}}
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0"><i class="fa-regular fa-envelope"></i>  Email</h6>
-                
-              </div>
-              <div class="col-sm-9 text-secondary">
-                {{email}}
-              </div>
-            </div>
-            <hr>
 
-            <div class="row">
-              <div class="col-sm-12">
-                <a class="btn btn-info " target="__blank"
-                  href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
-              </div>
+
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <section class="container pt-3 mb-3 ">
+          <div class="row pt-5 mt-30">
+            <div class="col-lg-6 col-sm-6 mb-30 pb-5  ">
+              <a class="card" href="#">
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center"
+                  style="width: 90px; height: 90px; margin-top: -45px;"><i
+                    class="fa-solid fa-list-check fa-3x head-icon" style="color: blue;"></i></div>
+                <div class="card-body text-center">
+                  <h3 class="card-title pt-1">My Project</h3>
+                  <p class="card-text text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip.</p><span
+                    class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
+                      class="fe-icon-arrow-right"></i></span>
+                  <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                      The current link item
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                    <a class="list-group-item list-group-item-action disabled">A disabled link item</a><a href="#"
+                      class="list-group-item list-group-item-action">A second link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                    <a class="list-group-item list-group-item-action disabled">A disabled link item</a>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-6 col-sm-6 mb-30 pb-5">
+              <a class="card" href="#">
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center"
+                  style="width: 90px; height: 90px; margin-top: -45px;"> <i
+                    class="fa-regular fa-thumbs-up fa-3x head-icon" style="color: blue;"></i></div>
+                <div class="card-body text-center">
+                  <h3 class="card-title pt-1">Liked Project</h3>
+                  <p class="card-text text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip.</p><span
+                    class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
+                      class="fe-icon-arrow-right"></i></span>
+
+                  <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                      The current link item
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                    <a class="list-group-item list-group-item-action disabled">A disabled link item</a>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
-        </div>
-
-        <div class="row gutters-sm">
-          <div class="col-sm-6 mb-3">
-            <div class="card h-100">
-              <div class="card-body">
-                <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Own </i>Project
-                </h6>
-                <small>Web Design</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>Website Markup</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>One Page</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>Mobile Template</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>Backend API</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 mb-3">
-            <div class="card h-100">
-              <div class="card-body">
-                <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Liked</i> Project
-                </h6>
-                <small>Web Design</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>Website Markup</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>One Page</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>Mobile Template</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <small>Backend API</small>
-                <div class="progress mb-3" style="height: 5px">
-                  <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
+        </section>
 
       </div>
     </div>
